Feat: Se implementó inversión de dependencias: 1.-Se configuraron los archivos biblio\pom.xml, biblio\src\main\webapp\META-INF\context.xml, biblio\src\main\webapp\WEB-INF\beans.xml y biblio\src\main\webapp\WEB-INF\web.xml 2.-Se creó la clase biblio\src\main\java\cdi\InjectionBeanCDI.java para inicializar los Beans que permiten realizar la inverción de dependencias en los Servlet del Controller