@@ -139,6 +139,10 @@
         <configuration>
           <port>8080</port>
           <path>/</path>
+          <contextFile>src/main/webapp/META-INF/context.xml</contextFile>
+          <systemProperties>
+            <JAVA_OPTS>--add-opens java.base/java.lang=ALL-UNNAMED</JAVA_OPTS>
+          </systemProperties>
         </configuration>
       </plugin>
     </plugins>
